# oraimo_pipeline

./: .gitignore  README.md  config.py  extract.py  load.py  main.py  pyproject.toml  requirements.txt  transform.py
